<resources>
    <string-array name="rSpin">
        <item>-Select-</item>
        <item>RENT</item>
        <item>DEPOSIT</item>
    </string-array>

    <string name="app_name">Project Room</string>
    <string name="itemSpin">- SELECT -</string>
    <string name="enter_alternative_no">Alternative Num</string>
    <string name="enter_adhar_no">Adhaar Num</string>
    <string name="enter_pancard_no">PAN Card No.</string>
    <string name="enter_paiddeposite">Paid Deposit</string>
    <string name="enter_remaining_deposite">Remaining Deposit</string>
    <string name="deposite">Deposit</string>
    <string name="room_id">Room No</string>
    <string name="enter_contact_no">Contact No.</string>
    <string name="enter_name">Enter Name</string>
</resources>
