<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Customer.CustomerStore">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/bg">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10sp">

                <EditText
                    android:id="@+id/nam"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/enter_name"
                    android:singleLine="true"
                    />

                <EditText
                    android:id="@+id/con1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/enter_contact_no"
                    android:singleLine="true"
                    />

                <EditText
                    android:id="@+id/con2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:singleLine="true"
                    android:hint="@string/enter_alternative_no"
                    />

                <EditText
                    android:singleLine="true"
                    android:id="@+id/adhr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/enter_adhar_no"
                    />

                <EditText
                    android:singleLine="true"
                    android:id="@+id/pan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/enter_pancard_no"
                    />

                <EditText
                    android:singleLine="true"
                    android:id="@+id/pd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/enter_paiddeposite"
                    />

                <EditText
                    android:id="@+id/tx_Pname"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/enter_remaining_deposite" />

                <EditText
                    android:id="@+id/d"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:singleLine="true"
                    android:hint="@string/deposite" />

                <EditText
                    android:id="@+id/jd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:singleLine="true"
                    android:hint="Joining Date" />

                <EditText
                    android:id="@+id/ld"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:singleLine="true"
                    android:hint="Levaving Date" />

                <EditText
                    android:id="@+id/me"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:singleLine="true"
                    android:hint="meter" />

                <EditText
                    android:id="@+id/return1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:singleLine="true"
                    android:hint="Return Deposite" />

                <EditText
                    android:id="@+id/rr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:singleLine="true"
                    android:hint="Room Rent" />

                <EditText
                    android:id="@+id/sta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:singleLine="true"
                    android:hint="Status" />

                <EditText
                    android:id="@+id/rid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:singleLine="true"
                    android:hint="@string/room_id" />
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="SAVE"
                android:layout_weight="1"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="CLEAR"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="SHOW ALL"/>

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>